# miner-fsm

./: .gitignore  BaseEntity.h  CMakeLists.txt  EnterMineAndDigForNugget.cpp  EnterMineAndDigForNugget.h  GoHomeAndSleepTillRested.cpp  GoHomeAndSleepTillRested.h  Location.h  Miner.cpp  Miner.h  MinerGlobalState.cpp  MinerGlobalState.h  QuenchThirst.cpp  QuenchThirst.h  README.md  State.cpp  State.h  StateMachine.h  VisitBankAndDepositGold.cpp  VisitBankAndDepositGold.h  main.cpp
